--- a/Lesson 23 Activity 3/index.html
+++ b/Lesson 23 Activity 3/index.html
@@ -4,28 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS</title>
+    <title>Document</title>
 </head>
 
 <body>
     <h1>Lesson 23 Activity 3</h1> <br><br>
-    <h2>Argument Objects in JS</h2> <br><br>
-    <p id="result"></p>
+    <h2>Call Stack in JS</h2> <br><br>
+    <p id="demo"></p>
 
     <script>
-        function findMax() {
-            let i = 0;
-            let max = 0;
 
-            for (i in arguments) {
-                if (arguments[i] > max) {
-                    max = arguments[i];
-                }
-            }
-            return max;
+        function add(x, y) {
+            return (x + y);
+
         }
-        document.getElementById("result").innerHTML = "The Max among them is: " + findMax(11, 22, 33, 44, 55, 3, 2, 667);
+
+
+        function average(a, b) {
+            return add(a, b) / 2;
+        }
+
+        document.getElementById("demo").innerHTML = "\n The Average of 11 & 22 is :  " + average(11, 22);
     </script>
+
 </body>
 
 </html>
