--- a/Lesson 24 Activity 3/index.html
+++ b/Lesson 24 Activity 3/index.html
@@ -11,6 +11,7 @@
     <h1>Lesson 24 Activity 3</h1> <br><br>
     <h2>Real - Time Form Validation</h2> <br> <br>
     <h3>Enter Form Details</h3>
+    <p id="msgbox"></p>
     <form>
         <fieldset>
             <label> Name: </label><br>
@@ -21,10 +22,10 @@
             <input type="number" id="mobile"><br><br>
             <label> Age: </label><br>
             <input type="number" id="age"><br><br>
-            <button onclick="myfunc()">Submit</button>
+
         </fieldset>
     </form>
-
+    <button onclick="myfunc()">Submit</button>
     <script src="script.js"> </script>
 </body>
 
